--- a/css/style.css
+++ b/css/style.css
@@ -41,7 +41,7 @@ a {
     color: inherit; 
     text-decoration: none; 
     margin: inherit;
-    padding: inherit;
+    padding: 0;
     justify-content: center;
 }
 
@@ -87,14 +87,22 @@ button:hover {
     align-items: center;
 }
 
+#headerLeft{
+    display: flex;
+    justify-content: flex-start;
+    padding: 0px 10px;
+}
+
 #headerRight{
     display: flex;
     justify-content: flex-end;
     padding: 0px 10px;
+    
 }
 
 #userInfo {
     justify-content: center;
+    text-align: center;
 }
 
 #profilePicture {
@@ -138,12 +146,9 @@ button:hover {
     display: none;
 }
 
-
-
 #container {
     display: flex;
     width: 80%;
-    
 }
 
 #activity {
@@ -164,7 +169,6 @@ button:hover {
 
 #activity:hover{
     background-color: rgb(231, 244, 255);
-
 }
 
 #textRow {
